examples/test/testpolicy1754.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1754
  namespace: namespace36
spec:
  podSelector:
    matchLabels:
      key18: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value41
          key3: value20
          key33: value35
      podSelector:
        matchLabels:
          key36: value20
          key21: value16
          key35: value38
